--- a/.woodpecker/notify.yml
+++ b/.woodpecker/notify.yml
@@ -5,8 +5,7 @@ steps:
   - name: Notify
     image: codeberg.org/l-x/woodpecker-ntfy
     settings:
-      url:
-        from_secret: ntfy_server
+      url: https://notifications.agala.com.ar/agala-ci
       token:
           from_secret: ntfy_token
       title: Deploy by ${CI_COMMIT_AUTHOR} on ${CI_COMMIT_BRANCH}
